--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,12 +12,15 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #000000;
+$primary: rgb(73, 69, 255);
+//$primary   : #000000;
 $secondary : #d8dBdD;
 $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark      : #212134;
+$dark-page : #181826;
+$light     : #ffffff;
+$light-page: #f5f5f5;
 
 $positive  : #21BA45;
 $negative  : #C10015;
@@ -32,4 +35,14 @@ $button-font-weight             : 500 !default;
 $button-font-size               : 13.5px !default;
 $h2:        (size: 1.938rem,  line-height: 2.519rem,  letter-spacing: -0.041rem, weight: 700) !default;
 $h3:        (size: 1.25rem,     line-height: 2.125rem, letter-spacing: normal,    weight: 700) !default;
-$button-border-radius           : 8px !default;
+$button-border-radius           : 4px !default;
+
+
+$separator-color         : rgba(0, 0, 0, .12) !default;
+$separator-dark-color    : rgba(255, 255, 255, .28) !default;
+
+// $table-dark-border-color        : $separator-dark-color !default;
+// $table-dark-hover-background    : rgba(255, 255, 255, .07) !default;
+// $table-dark-selected-background : rgba(255, 255, 255, .1) !default;
+// $table-box-shadow-dark          : $dark-shadow-2 !default;
+
