--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -20,7 +20,9 @@ $accent    : #9C27B0;
 $dark      : #212134;
 $dark-page : #181826;
 $light     : #ffffff;
-$light-page: #f5f5f5;
+// $light-page: #f5f5f5;
+//$light-page: rgb(226 232 240); // bg-slate-200
+$light-page: rgb(241 245 249); // bg-slate-100
 
 $positive  : #21BA45;
 $negative  : #C10015;
