--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -26,7 +26,7 @@
       @apply t-text-xs t-font-bold t-py-2 t-pl-2;
     }
     .q-list .q-item__section--avatar {
-      @apply t-min-w-0 t-pr-3;
+      @apply t-min-w-0 t-px-2;
     }
     .q-list .q-item .q-focus-helper {
       @apply t-top-0 t-left-2 t-right-2 t-w-auto t-bottom-0 t-h-auto t-rounded-sm;
