--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -128,3 +128,9 @@ a{
   src: url(../assets/Inter.ttf) format("truetype-variations");
 }
 
+//para sig ssomac
+// @layer components {
+//   .title-sommac{
+//     @apply t-font-bold t-text-xl;
+//   }
+// }
